test/ClangImporter/ctypes_parse_swift4.code
// RUN: %target-typecheck-verify-language %clang-importer-sdk -language-version 4

import ctypes

fn testArrays() {
  // It would also be nice to warn here about the arrays being too short, but
  // that's probably beyond us for a while.
  staticBoundsArray([])
  staticBoundsArray(nil) // expected-error {{'nil' is not compatible with expected argument type 'UnsafePointer<CChar>'}}
}
